Fix minor CSS issues (#3363)
* Do not allow right columns to shrink in Neo
* Fix overlapping left/center buttons in ProjectToolbar

--- a/appinventor/appengine/war/static/css/Ya.css
+++ b/appinventor/appengine/war/static/css/Ya.css
@@ -3298,7 +3298,7 @@ div.dropdiv p {
 }
 
 .ya-Toolbar .right {
-  min-width: 410px;
+  flex-shrink: 0;
   text-align: right;
 }
 
